# NQueens

./: CMakeLists.txt  README.md  nqueens.cpp
